--- a/src/client/makefile
+++ b/src/client/makefile
@@ -1,6 +1,6 @@
 inotify:inotify.cpp
 	 g++ inotify.cpp -g -lpthread -o inotify -lrt
 testp.so:testp.c
-	gcc -shared -fPIC testp.c -o testp.so -ldl -lpthread -lrt 
+	gcc -shared -fPIC hook.c -o hook.so -ldl -lpthread -lrt 
 clean:
 	-rm -rf inotify.o
