--- a/src/client/makefile
+++ b/src/client/makefile
@@ -1,4 +1,12 @@
-inotify:inotify.cpp
-	 g++ inotify.cpp -g -lpthread -o inotify -lrt
+CC=g++
+CFLAGS = -g -lpthread -lrt
+SRC = $(wildcard *.cpp)
+OBJ = $(patsubst %cpp, %o, $(SRC))
+BIN = inofity
+all:$(OBJ)
+	$(CC) $(OBJ) -o $(BIN) $(CFLAGS)
+ 
+%.o:%.cpp
+	$(CC) $(STD) $(CFLAGS) -c $< -o $@
 clean:
-	-rm -rf inotify.o
+	rm  $(BIN) $(OBJ)
