--- a/src/client/makefile
+++ b/src/client/makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS = -g -lpthread -lrt
 SRC = $(wildcard *.cpp)
 OBJ = $(patsubst %cpp, %o, $(SRC))
-BIN = inofity
+BIN = inotify
 all:$(OBJ)
 	$(CC) $(OBJ) -o $(BIN) $(CFLAGS)
  
